--- a/paginas/reset.css
+++ b/paginas/reset.css
@@ -1,3 +1,7 @@
+/*Nom del fitxer: reset.css
+Data de creació: 21/11/2017
+Nom del creador: Jose Gonzalez
+Descripció de la funcionalitat: Verifica que los estilos heredados del navegador no estropeen nuestro estilo; asegurarse que todo es correcto.*/
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
